// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H3 should allow weight to be overridden 1`] = `
.glamor-0 {
  display: block;
}

<h3
  className="glamor-0 root weight-light size-small color-charcoal hover-color-none root"
  href={undefined}
  name={undefined}
  onClick={undefined}
  style={Object {}}
  target={undefined}
>
  An H3 Tag
</h3>
`;

exports[`H3 should render shallow component ok 1`] = `
.glamor-0 {
  display: block;
}

<h3
  className="glamor-0 root weight-semi-bold size-small color-charcoal hover-color-none root"
  href={undefined}
  name={undefined}
  onClick={undefined}
  style={Object {}}
  target={undefined}
>
  An H3 Tag
</h3>
`;
